--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,114 @@
+/*css reset*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center, input, textarea
+dl, dt, dd, ol, ul, br,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, output, ruby, section, summary,
+time, mark, audio, video {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    white-space: pre-line;
+    vertical-align: baseline;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
+}
+
+h1 {
+  font-size: 80px;
+  font-weight: 200;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+label,
+input,
+h4 {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+h5 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+a,
+p,
+li,
+input,
+textarea,
+blockquote,
+span {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  word-spacing: .1em;
+}
+
+br {
+  display: block;
+  margin-top: 10px;
+}
+
+form {
+  display: block;
+  margin: 30px auto;
+}
+
+input {
+  height: 50px;
+  width: 80px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  text-align: center;
 }
 
 a {
   color: #00B7FF;
+}
+
+#letter-search-go {
+  background: #5DA4C1;
+  border-radius: 10px;
+  color: #fff;
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  margin: 0 auto;
+  width: 80px;
+}
+
+.mindset-dictionary-letterlist {
+  text-align: left;
+}
+
+.mindset-photo-definition {
+  height: auto;
+  margin: 20px auto;
+  width: 70%;
+}
+
+.mindset-photo-definition span svg {
+  margin-left: 50px;
 }
