changed input for dictionary letter to select box

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,36 @@
 extends layout
 
 block content
-  h1 Photography Dictionary Admin
-  h3 Access to readily insert and edit entries to mindsetphotodefs
-  .mindset-dictionary-form
-    form
-      label(for='letter') Dictionary Letter
-      br
-      input(type='text', id='letter', name='letter')
-    span#letter-search-go
-      i.fa.fa-arrow-right
+  main
+    h3 Access to readily insert and edit entries to mindsetphotodefs
+    .mindset-dictionary-form
+      form
+        label(for='letter') Dictionary Letter
+        br
+        select#letter(name='letter')
+          option(value="a") A
+          option(value="b") B
+          option(value="c") C
+          option(value="d") D
+          option(value="e") E
+          option(value="f") F
+          option(value="g") G
+          option(value="h") H
+          option(value="i") I
+          option(value="j") J
+          option(value="k") K
+          option(value="l") L
+          option(value="m") M
+          option(value="n") N
+          option(value="o") O
+          option(value="p") P
+          option(value="q") Q
+          option(value="r") R
+          option(value="s") S
+          option(value="t") T
+          option(value="u") U
+          option(value="v") V
+          option(value="w") W
+          option(value="x") X
+          option(value="y") Y
+          option(value="z") Z
