--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,8 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet")
     script(src="/javascripts/mindseticons.min.js")
   body
+    include topnav.pug
     block content
       
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
