changed welcome message on index

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   main
-    h3 Access to readily insert and edit entries to mindsetphotodefs
+    h3 Insert and Edit Entries to MINDSETPHOTODEFS
     .mindset-dictionary-form
       form
         label(for='letter') Dictionary Letter
