added default to select dropdown

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,7 @@ block content
         label(for='letter') Dictionary Letter
         br
         select#letter(name='letter')
+          option(value="blank", selected, disabled, hidden) Select 
           option(value="a") A
           option(value="b") B
           option(value="c") C
