--- a/views/topnav.pug
+++ b/views/topnav.pug
@@ -1,3 +1,6 @@
 header
   .header-title-container
     h1 PHOTOGRAPHY DICTIONARY ADMIN
+    a(href='/')
+      i.fad.fa-home
+    include alphaselector.pug
