--- a/views/dictionaryalphalist.pug
+++ b/views/dictionaryalphalist.pug
@@ -17,7 +17,6 @@ block content
               br
               input#new-dictionary-term(type='text', name='new-dictionary-term')
               br
-              br
               label(for='new-term-synonyms') New Term Synonyms
               br
               input#new-term-synonyms(type='text', name='new-term-synonyms')
@@ -30,8 +29,10 @@ block content
               br
               textarea#new-term-def(type='text', name='new-term-def')
               br
-              span.new-term-submit Submit
-              span.new-term-cancel Cancel
+              span.new-term-submit
+                i.far.fa-save.fa-lg
+              span.new-term-cancel
+                i.far.fa-times-square.fa-lg
         each l in letterlisting
           .mindset-photo-definition(id=`${l.termquick}`,
             data-id=`${l._id}`,
@@ -76,5 +77,7 @@ block content
               br
               textarea#edit-term-def(type='text', name='edit-term-def')
               br
-              span.edit-term-submit Submit
-              span.edit-term-cancel Cancel
+              span.edit-term-submit
+                i.far.fa-save.fa-lg
+              span.edit-term-cancel
+                i.far.fa-times-square.fa-lg
