add layout for letter selector and dictionary instructions

--- a/views/dictionarylanding.pug
+++ b/views/dictionarylanding.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   main
+    h2 Photography Dictionary Management
     include alphaselector.pug
     h3 Overview
     p The Dictionary Admin tool provides a UI to add, update, or delete dictionary terms from the Photography Mindset Dictionary page. 
