rearranged layout for top nav, added nav buttons for blog and dictionary landings

--- a/views/topnav.pug
+++ b/views/topnav.pug
@@ -1,5 +1,9 @@
 header
   .header-title-container
-    h1 PHOTOGRAPHY DICTIONARY ADMIN
+    h1 PHOTOGRAPHY MINDSET ADMIN
     a(href='/')
       i.fad.fa-home
+    a(href='/blog')
+      span Blog Admin
+    a(href='/dictionary')
+      span Dictionary Admin
