renamed labels from edit to new

--- a/views/newblogform.pug
+++ b/views/newblogform.pug
@@ -12,7 +12,7 @@ block content
           i.far.fa-plus-circle.fa-lg
       form.new-blog-form
         .form-text-input
-          label(for='new-dictionary-term') New BLog Title
+          label(for='new-blog-title') New Blog Title
           br
           input#new-blog-title(type='text', name='new-blog-title')
           br
