added icon to preview blog post

--- a/views/bloglanding.pug
+++ b/views/bloglanding.pug
@@ -10,6 +10,8 @@ block content
     section.blog-listing-container
       each l in bloglisting
         .blog-landing-listing
+          a.blog-post-preview(href=`/blog/${l.postquick}`)
+            i.fad.fa-eye.fa-lg
           h4= l.posttitle
           h5= l.postsummary
           span= l.postdate.toString().substring(0,15)
