updated blogview to account for subcontent order

--- a/views/blogsampleview.pug
+++ b/views/blogsampleview.pug
@@ -8,11 +8,12 @@ block content
           h2= article.posttitle
           h4= article.postsummary
       article.blog-article
+        - article.postcontent.sort(function(a, b) {return a.postsuborder - b.postsuborder;})
         each p in article.postcontent
           .blog-article-subsection
             h5= p.postsubheader
             if p.postsubimage !== ''
               img(src=`${p.postsubimage}`)
-            //if p.postsubimage !== ''
+            if p.postsubimage !== ''
               span.subimage-caption= p.postsubimagecaption
             p= p.postsubtext
